--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\seijee\\AppData\\Roaming\\NetBeans\\8.0\\tomcat70.properties
-j2ee.server.home=D:/softwares/apache-tomcat-7.0.39-windows-x64/apache-tomcat-7.0.39
-j2ee.server.instance=tomcat70:home=D:\\softwares\\apache-tomcat-7.0.39-windows-x64\\apache-tomcat-7.0.39
+deploy.ant.properties.file=C:\\Users\\seijee\\AppData\\Roaming\\NetBeans\\8.0\\tomcat80.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.3
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.3:base=apache-tomcat-8.0.3.0_base
 selected.browser=default
 user.properties.file=C:\\Users\\seijee\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
