--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,5 @@ deploy.ant.properties.file=C:\\Users\\seijee\\AppData\\Roaming\\NetBeans\\8.0\\t
 j2ee.server.domain=C:/Users/seijee/AppData/Roaming/NetBeans/8.0/apache-tomcat-8.0.3.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.3
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.3:base=apache-tomcat-8.0.3.0_base
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\seijee\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
